:lipstick: | fix overflow

--- a/front/src/pages/homeUser/homeUser.css
+++ b/front/src/pages/homeUser/homeUser.css
@@ -26,7 +26,8 @@
 }
 .tickets_container {
   height: 56vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x:hidden;
   position: relative;
 }
 
